--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Pareto Theta Vault v1 is the first version of Pareto's Theta Vault built on top of Primitive's RMM-01 pools.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "npx hardhat compile",
+    "lint:sol": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
+    "lint:sol:prettier": "./node_modules/.bin/prettier --write contracts/**/*.sol"
   },
   "repository": {
     "type": "git",
@@ -30,9 +33,13 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5"
   },
+  "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "axios": "^0.27.2"
+  },
+  "mocha": {
+    "timeout": 20000
   }
 }
