--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/pareto-xyz/pareto-theta-vault-v1/issues"
   },
@@ -30,10 +30,10 @@
     "hardhat": "^2.9.7",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solc": "^0.8.4",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5"
   },
-  "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
