--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "lint:sol": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
     "lint:sol:prettier": "./node_modules/.bin/prettier --write contracts/**/*.sol"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "contracts/**/*.sol": [
+      "yarn lint:sol",
+      "yarn lint:sol:prettier"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pareto-xyz/pareto-theta-vault-v1.git"
@@ -28,6 +39,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
+    "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solc": "^0.8.4",
