--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solc": "^0.8.4",
     "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "^0.0.5"
+    "solhint-plugin-prettier": "^0.0.5",
+    "ts-node": "^10.8.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
