--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@types/mocha": "^9.1.1",
     "chai": "^4.3.6",
     "eslint": "^8.17.0",
     "ethereum-waffle": "^3.4.4",
