--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8.17.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.7",
     "husky": "^8.0.1",
     "prettier": "^2.6.2",
