--- a/package.json
+++ b/package.json
@@ -7,25 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "npx hardhat compile",
     "lint:sol": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
-    "lint:sol:prettier": "./node_modules/.bin/prettier --write contracts/**/*.sol"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "contracts/**/*.sol": [
-      "yarn lint:sol",
-      "yarn lint:sol:prettier"
-    ]
+    "lint:prettier": "./node_modules/.bin/prettier --write contracts/**/*.sol",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pareto-xyz/pareto-theta-vault-v1.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Theta Vault",
+    "Replicating Market Maker",
+    "DeFi Options"
+  ],
+  "author": "Pareto Labs, Inc.",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/pareto-xyz/pareto-theta-vault-v1/issues"
