--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "husky": {
     "hooks": {
-        "pre-commit": "yarn lint:prettier && git add -A ."
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*": "yarn lint:prettier"
   },
   "repository": {
     "type": "git",
@@ -42,6 +45,7 @@
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.7",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solc": "^0.8.6",
