--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hardhat": "^2.9.7",
     "hardhat-deploy": "^0.11.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-tracer": "^1.1.0-rc.6",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
     "mocha": "^10.0.0",
@@ -69,8 +70,10 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "@primitivefi/rmm-core": "^1.0.0",
+    "@primitivefi/rmm-ethers": "^1.2.0-rc.1",
     "@primitivefi/rmm-manager": "^1.1.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "hardhat-dependency-compiler": "^1.1.3"
   },
   "mocha": {
     "timeout": 20000
