--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ethers": "^5.6.9",
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.7",
+    "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-deploy": "^0.11.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-tracer": "^1.1.0-rc.6",
@@ -61,8 +62,6 @@
     "solc": "^0.8.6",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
-    "truffle": "^5.5.18",
-    "truffle-contract-size": "^2.0.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
@@ -72,8 +71,7 @@
     "@primitivefi/rmm-core": "^1.0.0",
     "@primitivefi/rmm-ethers": "^1.2.0-rc.1",
     "@primitivefi/rmm-manager": "^1.1.0",
-    "axios": "^0.27.2",
-    "hardhat-dependency-compiler": "^1.1.3"
+    "axios": "^0.27.2"
   },
   "mocha": {
     "timeout": 20000
