--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "web3-units": "^1.4.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
