--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@primitivefi/rmm-math": "^2.0.0-beta.3",
     "@types/chai": "^4.3.1",
+    "@types/jest": "^28.1.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "chai": "^4.3.6",
