--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "@primitivefi/rmm-core": "^1.0.0",
     "@primitivefi/rmm-ethers": "^1.2.0-rc.1",
     "@primitivefi/rmm-manager": "^1.1.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "evm-bn": "^1.1.1"
   },
   "mocha": {
     "timeout": 20000
