--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^18.0.0",
     "chai": "^4.3.6",
     "chai-ethers": "^0.0.1",
+    "cloc": "^2.10.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "ethereum-waffle": "^3.4.4",
