--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-deploy": "^0.11.10",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.8",
     "hardhat-tracer": "^1.1.0-rc.6",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
